--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,120 @@
-body {
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+
+:root {
+  --primary-color: #000;
+  --secondary-color: #505050;
+
+  --text-color: #fff;
+
+  --positive-color: #00c853;
+  --negative-color: #ff5252;
+}
+
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+body {
+  /* font-size: 24px; */
+  color: var(--text-color);
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--primary-color);
+}
+nav {
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  height: 60px;
+  width: 100%;
+  background: var(--secondary-color);
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  text-transform: uppercase;
+  font-size: 1rem;
+}
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px 20px;
+
+  /* outline: 2px solid #fff; */
+
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+.stock {
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 20px 20px;
+  outline: 2px solid var(--secondary-color);
+  color: var(--text-color);
+
+  max-width: 100%;
+}
+.ticker {
+  text-transform: uppercase;
+}
+.name {
+  color: var(--secondary-color);
+}
+.stock-info {
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  gap: 5px;
+}
+.percentage {
+  padding: 5px 10px;
+  border-radius: 5px;
+  background-color: var(--positive-color);
+}
+.percentage::after{
+  content: '%';
+}
+.search {
+  background-color: var(--secondary-color);
+  border-radius: 20px;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+input {
+  width: 100%;
+  
+  border: none;
+  padding: 10px;
+  font-size: 1rem;
+  outline: none;
+
+  background-color: transparent;
+  color: var(--text-color);
+
+  text-align: center;
+}
+
+/* Media Queries */
+@media screen and (min-width: 768px) {
+  .container {
+    grid-template-columns: 1fr 1fr;
+  }
+  .search {
+    grid-column: span 3;
+    grid-row: span 2;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .search {
+    grid-column: span 3;
+    grid-row: span 2;
+  }
 }
