--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@ nav {
 }
 a {
   text-decoration: none;
-  color: var(--primary-color);
+  color: var(--text-color);
 }
 .container {
   width: 100%;
